# grism_sim

./: .gitignore  .readthedocs.yaml  README.md  README.rst  pyproject.toml
data/: Roman.det1.03192025.conf  Roman.det1.03192025_rot.conf  Roman.det1.03192025_rotAB.conf  Roman.det1.03192025_rotAC.conf  Roman.det1.03192025_rotAonly.conf  Roman.det1.07242020.conf  Roman.det1.simple.conf  Roman.det10.07242020.conf  Roman.det11.07242020.conf  Roman.det12.07242020.conf  Roman.det13.07242020.conf  Roman.det14.07242020.conf  Roman.det15.07242020.conf  Roman.det16.07242020.conf  Roman.det17.07242020.conf  Roman.det18.07242020.conf  Roman.det2.07242020.conf  Roman.det3.07242020.conf  Roman.det4.07242020.conf  Roman.det5.07242020.conf  Roman.det6.07242020.conf  Roman.det7.07242020.conf  Roman.det8.07242020.conf  Roman.det9.07242020.conf  Roman_grism_OpticalModel_v0.6.yaml  SCA12_prism_sens_12182024.fits  SCA14_prism_sens_12182024.fits  SCA1_prism_sens_12052024.fits  SCA5_sens_12182024.fits  SCA9_sens_12182024.fits  grizli_config.yaml  sens_0720_2020.fits  skycells_subset.ecsv  test_case.txt  test_case_gal.txt  test_case_star.txt  wfirst_wfi_f158_001_syn.fits
docs/: requirements.txt
notebooks/: grism_sim_simple_tutorial.ipynb  grism_sim_variable_psf_tutorial.ipynb
py/: __init__.py  combine_img_utils.py  edge_case_tests.py  file_handling_utils.py  grism_sim.py  grism_sim_new_galacticus.py  grism_sim_psf_dependent.py  image_utils.py  image_utils_grid.py  optical_model.py  ref_image_sim.py  test.ecsv  wavelength_dependent_PSF_grism_sim.py  wrap_with_romanisim.py
scripts/: build_compact_mock_file.py  convert_to_isim.py  (+32 more)
(+117 files in other folders)
