[project]
name = "Roman GRS PIT Grism Simulations"
authors = [{name = "Roman Galaxy Redshift Survey Project Infrastructure Team"}]
description = "Grism Simulation software for the Roman GRS PIT"
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
]
requires-python = ">3.10"
dependencies = [
    "numpy",
    "scipy",
    "astropy",
    "PyYAML",
    "h5py",
    "pysynphot",
    "grizli",
    "pysiaf",   
]
dynamics = ["version"]

[project.optional-dependencies]
docs = [
    "sphinx",
]
test = [
]

[project.urls]
"Bug Tracker" = "https://github.com/roman-grs-pit/grism_sim/issues"
"Source Code" = "https://github.com/roman-grs-pit/grism_sim"

[build-system]
requires - [
    "setuptools>=60",
    "setuptools_scm>=8.0",
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "py/_version.py"

[tool.setuptools.packages.find]
where = ["py"]