[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "grism_sim"
version = "0.1.0"
description = "A grism simulation package for Roman"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy<2",
    "tqdm", "h5py",
    "setuptools>=80.9.0,<81",
    "pysynphot", 
    "stpsf>=2.1,<3",
    "grizli"
]

[tool.setuptools.packages.find]
where = ["py"]

[tool.setuptools.package-dir]
"" = "py"
